--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,13 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    // Core dependencies
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:5.0.4'
+    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
+    implementation "com.squareup.retrofit2:retrofit:2.11.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.11.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.12.0" // optional logging
+    implementation "com.google.code.gson:gson:2.11.0"
 }
